static/css/style.css
* {
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0;
	padding: 0;
	list-style: none;
	position: relative
}

html,
body {
	height: 100vh;
	width: 100vw;
	overflow-x: hidden;
}
/*
@media screen and (max-width:480px) {
	html,
	body {
		overflow: auto;
	}
}
*/
html,
body {
	overflow: auto;
}




h2 {
	border-bottom: 1px solid #e5e5e5;
	font-size: 1.6em;
}

h3 {
	font-size: 1.4em;
}

/* Configuration overlay */
#ui_notifIt {
	z-index: 20;
}

#modal-overlay .col-nav {
	padding-left: 0;
	padding-right: 0;
}

.overlay.on {
	visibility: visible;
	opacity: 1;
}

.overlay {
	width: 100vw;
	height: 100vh;
	background-color: rgba(0,0,0,0.9);
	color: #ffffff;
	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	opacity: 0;
	visibility: hidden;
	-webkit-transition: all .3s ease;
	-moz-transition: all .3s ease;
	transition: all .3s ease;
	z-index: 10;
	overflow-y:auto;
}

/* Widget default style */
.widget {
	display: block;
	position: absolute;
	-webkit-transform-style: preserve-3d;
	-moz-transform-style: preserve-3d;
  	transform-style: preserve-3d;
  	-moz-box-sizing: border-box;
    box-sizing: border-box;
    z-index: 5;
}

/* Form */

legend {
	color: #ffffff;
	border:none;
	font-size: 1em;
}

input[type='range'] {
	background-color: #000000;
}

/* Section configuration */
form#formConfig {
	padding-bottom: 30px;
}

#backgroundpreview {
	margin: 20px auto 0 auto;
	width: 300px;
	height: 200px;
	border: 1px solid #e5e5e5;
	position: relative;
}

#backgroundpreview #imagepreview {
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	position: absolute;
	background-position: 0 0;
	background-repeat: no-repeat;
	background-size: cover;
}

